--- a/2DExample/index.html
+++ b/2DExample/index.html
@@ -1,10 +1,18 @@
-<HTML>
-<HEAD>
-  <TITLE>2DE examples</TITLE>
-</HEAD>
-<BODY>
-  <a href="example.R">example.R (code)</a>
-  <a href="example_dataset.txt">example_dataset.txt (example dataset)</a>
-  <a href="example_sample_metadata.txt">example_sample_metadata.txt (example metadata)</a>
-</BODY>
-</HTML>
+<html>
+<head>
+  <title>Supplemental material for "Visualization and differential analysis of protein expression data using R"</title>
+</head>
+<body>
+  <h1>Supplemental material for "Visualization and differential analysis of protein expression data using R"</h1>
+
+  <h2>Files:</h2>
+  <a href="example.R">example.R (code)</a><br />
+  <a href="example_dataset.txt">example_dataset.txt (example dataset)</a><br />
+  <a href="example_sample_metadata.txt">example_sample_metadata.txt (example metadata)</a><br />
+
+  <h2>Mirrors:</h2>
+  <a href="http://dx.doi.org/10.6084/m9.figshare.1284620">figshare.com</a><br />
+  <a href="http://tomessilva.github.io/2DExample/">tomessilva.github.io</a><br />
+  <a href="http://tomesilva.com/2DExample/">tomesilva.com</a><br />
+</body>
+</html>
